sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:14: error: ';' expected but 'while' found.
    } while (d != 0)
      ^AlgBubbleSort1:16: error: 'while' expected but '}' found.
}
^