sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n = getNombreValeurs()
  var d = 1
  
    do {
      for (i<- 0 to n-2) {
      d = 1
      if (!plusPetit(i,i+1)) {
      echange(i,i+1)
    }
      else {d=0}
      
    } while (d != 0)
  }
}

